[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/path_manager/MarginalPointArea.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Area2D" type="Area2D" groups=[
"point_areas",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
